# reinforcement-automative-hexapod

./: .gitignore  .gitlab-ci.pages.yml  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  README.md  bbai  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh
.gitlab/ci/: build.yml  deploy.yml  docker.yml  pages.yml  test.yml
app/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
app/components/communication/: CMakeLists.txt  wifi_comm.cpp
app/components/communication/include/: wifi_comm.hpp
app/components/config/: CMakeLists.txt  config.cpp
app/components/gait/: CMakeLists.txt  gait_controller.cpp
app/components/hexapod/: CMakeLists.txt  hexapod.cpp
app/components/kinematics/: CMakeLists.txt  kinematics.cpp
app/components/leg/: CMakeLists.txt  leg.cpp
app/components/mpu6050/: CMakeLists.txt  mpu6050.cpp
app/components/servo_controller/: CMakeLists.txt  servo_controller.cpp
app/inc/: application.hpp  calibration.hpp  common.hpp  controller.hpp  gait.hpp  hexapod.hpp  kinematics.hpp  logger.hpp  sharpsensor.hpp  ultrasonic.hpp
app/inc/cpg/: controller.hpp  (+3 more)
app/main/: CMakeLists.txt  main.cpp
app/src/: application.cpp  calibration.cpp  common.cpp  controller.cpp  gait.cpp  hexapod.cpp  kinematics.cpp  logger.cpp  main.cpp  sharpsensor.cpp  ultrasonic.cpp  websocket.c
app/test/: adxl345.cpp  autonomous.cpp  balance.cpp  calibration.cpp  gp2y.cpp  hcsr04.cpp  movement.cpp  mpu6050.cpp  pwm.cpp  servo.cpp
common/: Makefile
common/inc/: common.h  hexerror.h  protocol.h
common/include/: hexapod_utils.h  protocol.h
common/src/: common.c  hexapod_utils.c  hexerror.c
deploy/: hexapod_main.ko  install.sh
docker/: README.md  app.Dockerfile  build.Dockerfile  common.Dockerfile  driver.Dockerfile  kernel.Dockerfile  pytd3.Dockerfile
docs/: README.md  architecture.md  hardware.md  quickstart.md  td3learn.md
docs/diagram/: UPDATES.md
docs/overview/: architecture.md  hardware.md  quickstart.md
docs/xmind/: components-summary.xmind
driver/: Makefile  README.md
driver/dts/: BBAI-MPU6050-overlay.dts  BBAI-PCA9685-overlay.dts
driver/inc/: adxl345.h  hexapod.h  mpu6050.h  pca9685.h  servo.h
driver/src/: adxl345.c  hexapod.c  main.c  mpu6050.c  pca9685.c  servo.c
hardware/BOM/: Automative_Hexapod.xlsx
hardware/Test/: Test_IR_Distance.kicad_prl  Test_IR_Distance.kicad_pro  Test_IR_Distance.kicad_sch
hexapodQt/: hexapodQt.pro  hexapodconnection.cpp  hexapodconnection.h  hexapodcontext.cpp  hexapodcontext.h  hexapodvisualization.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  resources.qrc
hexapodQt/qml/: Dashboard.qml  StatusBar.qml  VisualizationView.qml  main.qml
hexapodQt/utils/: server.py
kernel_driver/: .hexapod_main.ko.cmd  .hexapod_main.mod.cmd  .hexapod_main.mod.o.cmd  .hexapod_main.o.cmd  .modules.order.cmd  CMakeLists.txt  Makefile  Module.symvers  README.md  activate  hexapod_main.mod  hexapod_main.mod.c  modules.order
kernel_driver/.tmp_versions/: hexapod_main.mod
kernel_driver/device_tree/: BB-HEXAPOD.dts  BB-MPU6050.dts
kernel_driver/inc/: hexapod.h  mpu6050.h  pca9685.h  servo.h
kernel_driver/include/: gpio_control.h  hexapod.h  hexapod_ioctl.h  hexapod_main.h  i2c_comm.h  mpu6050.h  pca9685.h  pwm_control.h  servo.h  uart_comm.h
kernel_driver/src/: .gpio_control.o.cmd  .hexapod_main.o.cmd  .i2c_comm.o.cmd  .mpu6050.o.d  .pca9685.o.cmd  .pca9685.o.d  .pwm_control.o.cmd  .servo.o.cmd  .servo.o.d  .uart_comm.o.cmd  .uart_comm.o.d  Makefile  gpio_control.c  gpio_control.dwo  hexapod.c  hexapod_main.c  hexapod_main.dwo  i2c_comm.c  i2c_comm.dwo  mpu6050.c  pca9685.c  pca9685.dwo  pwm_control.c  pwm_control.dwo  servo.c  servo.dwo  uart_comm.c  uart_comm.dwo
package/: README.md
package/DEBIAN/: control  postinst  prerm
pytd3/: README.md  __init__.py  main.py  requirements.txt  setup.py  setup.sh  td3bridge.py
pytd3/agent/: td3.py
pytd3/bridge/: __init__.py  client.py  ipc.py
pytd3/config/: config.py  default.yaml
pytd3/environment/: hexapod.py
pytd3/models/: __init__.py  actor.py  critic.py
pytd3/utils/: hardware.py  memory.py
qtui/: .gitignore  README.md  hexapodconnection.cpp  hexapodconnection.h  hexapodcontext.cpp  hexapodcontext.h  hexapodprotocol.cpp  hexapodprotocol.h  hexapodvisualization.cpp  hexapodvisualization.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qtui.pro  res.qrc
qtui/components/: ConnectionPanel.qml  ControlPanel.qml  Dashboard.qml  JoystickControl.qml  StatusBar.qml  VisualizationView.qml  main.qml
qtui/styles/: basic.qss  hexapod.qss  hexapod_dark.qss
qtui/utils/: install.sh  server.py
scripts/: build.sh  deploy.sh  export.sh  install.sh  log_analysis.py  monitor.sh  setup.sh  setup_env.sh  test.sh
td3learn/: CMakeLists.txt  README.md
td3learn/configs/: default.yaml
td3learn/docker/: entrypoint.sh  td3learn.Dockerfile
td3learn/examples/: CMakeLists.txt  demo.cpp  td3_simple.cpp
td3learn/inc/td3learn/: agent.hpp  config.hpp  environment.hpp  hexapod.hpp  models.hpp  opencl.hpp  replay.hpp  tidl.hpp  tidlexport.hpp  tidlstub.hpp  trainer.hpp  types.hpp  utils.hpp
td3learn/src/: agent.cpp  config.cpp  deploy.cpp  environment.cpp  hexapod.cpp  main.cpp  models.cpp  opencl.cpp  replay.cpp  run.cpp  tidl.cpp  tidlexport.cpp  trainer.cpp  types.cpp  utils.cpp
td3learn/tools/: deploy.sh  hwdetect.sh  td3test.sh
user_space/: Makefile  README.md  servo_test
user_space/inc/: calibration.hpp  controller.h  controller.hpp  gait.h  gait.hpp  hexapod.h  hexapod.hpp  kinematics.h  kinematics.hpp
user_space/include/: gait.h  hexapod.h  hexapod_ioctl_user.h  hthreads.h  kinematics.h  test_ioctl.h
user_space/src/: calibration.cpp  controller.c  controller.cpp  gait.c  gait.cpp  hexapod.c  hexapod.cpp  hthreads.c  kinematics.c  main.c  main.cpp  movement_test.c  mpu6050_test.c  servo_test.c
user_space/test/: calibration.cpp  movement.c  movement.cpp  mpu6050.c  mpu6050.cpp  servo.c  servo.cpp  test_gait.c  test_kinematics.c  test_mpu6050.c  test_servo.c
utils/: install.sh  monitor.sh
(+132 files in other folders)
